# SMARTmonitor

./: .cproject  .gitattributes  .gitignore  .project  BUILD.md  CMakeLists.txt  ConfigurationLoaderBase.hpp  Core2Quad.cfg  Netbeans.txt  README.md  S.M.A.R.T._unknown.xpm  S.M.A.R.T._warning.xpm  SMART_attributes_definitions.cfg  SMARTaccessBase.cpp  SMARTaccessBase.hpp  SMARTmonitor.cfg  SMARTmonitor.xml  SMARTmonitorBase.cpp  SMARTmonitorBase.hpp  SMARTreaderTest.cpp  SMARTreaderTest.hpp  SMARTvalueProcessorBase.cpp  SMARTvalueProcessorBase.hpp  SMARmonitor_daemon_init.d_script  all_ressources_do_not_requ_admin_service.rc  create_ncursesTUI.sh  create_service.sh  create_wxGUI.sh  dynlib_OnChangedCriticalSMARTparameters_type.hpp  how_to_debug.txt  install_service.sh  localhost.xml  run_with_lib_dir.bat  service.cfg  service_main.cpp  start_wxSMARTmonitorGUI_as_root.sh  start_wxSMARTmonitorGUI_for_localhost.sh  version_info_GUI.rc  wxSMARTmonitor.cfg  wxSMARTmonitorApp.cpp  (+5 more)
ConfigLoader/: ParseConfigFileException.hpp
Linux/: SMARTmon.service  SMARTmon.service.skeleton  SMARTmonitor.desktop.skeleton  SMARTmonitor.man  createOSmenuItemFile.sh  create_Manjaro_package.txt  create_autostart_entry.txt  create_man_page.sh  enable_NetBeans_startup.txt  install_Debian_package.txt  install_service.sh  install_service_systemd.sh  list_installed_wxWidgets_packages.txt  man-page.txt  replaceTextBy_sed.sh  show_all_listening_servers.sh
Unix/: LXQt_autostart.txt  deinstall_service_sysV.sh  install_service_sysV.sh
UserInterface/: UserInterface.hpp
Windows/: ConfigurationLoader.cpp
attributes/: SMARTattributeNameAndID.cpp  SMARTattributeNameAndID.hpp  SMARTentry.hpp  SMARTuniqueID.cpp  SMARTuniqueID.hpp  SMARTuniqueIDandValues.cpp  SMARTuniqueIDandValues.hpp  SMARTuniqueIDandValues_test.cpp
client/: SMARTmonitorClient.cpp  SMARTmonitorClient.h
config/: SMARTmonitor.cfg  SMARTsrvCnnctn.xml  dataCarrierDefs.xml  localhost.xml
create/: Linux.txt  Visual_Studio_Code.txt  createCmnFilesDebPkg.sh  createDebPkg.sh  createReleaseDebPkg.sh  create_source_package.sh
data/: 'INTEL SSDSC2BF240A5H REF'_firmware'LWDi'.txt
icons/: S.M.A.R.T._OK.xpm
info/: Haftungsausschluss.txt  Netbeans.txt  debug_Linux.txt  debug_with_NetBeans_IDE.txt  disclaimer_of_liability.txt  features_and_limitations.txt
libATA_SMART/: CMakeLists.txt  SMART_test.cpp  SMARTaccess.cpp  SMARTaccess.hpp  SkDisk.h
libConfig/: CMakeLists.txt  (+2 more)
src/: CMakeLists.txt  ID_prefix.h  SMARTaccType.hpp  SMARTaccessBase.cpp  SMARTaccessBase.hpp  SMARTaccessBase_test.cpp  SMARTattrValRtng.cpp  SMARTattrValRtngDecl.hpp  SMARTattributeNames.h  SMARTmon_ID_prefix.h  SMARTmonitorBase.cpp  SMARTmonitorBase.hpp  SMARTvalueFormatter.cpp  SMARTvalueFormatter.hpp  SMARTvalueProcessorBase.hpp  SMARTvalueRater.hpp  Unix.cmake  addCfgFiles.cmake  bldTmCharArr.c  bldTmCharArr.h  clientSrvSrcFiles.cmake  createDebPkg.cmake  createExeName.cmake  createOSmenuItem.cmake  createServiceFile.cmake  dynlib_OnChangedCriticalSMARTparameters_type.hpp  setCmnSrcDir.cmake
src/ConfigLoader/: ConfigurationLoaderBase.hpp  ParseConfigFileException.hpp
src/Linux/: createDebPkg.cmake  createManPage.cmake  createOSmenuItem.cmake  debPkgPostinst.cmake
src/Linux/systemd/: createServiceFile.cmake
src/UserInterface/: SMARTattrTblHdrWStr.cpp  SMARTparamTblHdrWStr.c  SMARTparamTblHdrWStr.h  UserInterface.cpp  UserInterface.hpp  columnIndices.hpp  enLiterals.h
src/Windows/: ConfigurationLoader.hpp  SMARTaccess.h  SMARTmonOpsSysWindows_ID_prefix.h  Windows.cmake
src/attributes/: ModelAndFirmware.hpp  SMARTattr.hpp  SMARTattrDef.cpp  SMARTattrDef.hpp  SMARTattrDefAccss.cpp  SMARTattrDefAccss.hpp  SMARTattrDefsType.hpp  SMARTattrVal.cpp  SMARTattributeNameAndID.cpp  SMARTattributeNameAndID.hpp  SMARTentry.cpp  SMARTentry.hpp  SMARTuniqueID.cpp  SMARTuniqueID.hpp  SMARTuniqueIDandValues.cpp  SMARTuniqueIDandValues.hpp  defineRtgRngValsAsFloat.c
src/client/: SMARTmonClientDerived.cmake  SMARTmonitorClient.cpp  SMARTmonitorClient.h
src/client/InterProcComm/: directory_name.txt
src/client/InterProcComm/BSDskt/: SMARTmonUI_BSDskt.cpp
src/curses/: ConnectToServerDialog.cpp  ConnectToServerDialog.hpp  MainWindow.cpp  MainWindow.hpp  NcursesUI.cpp  NcursesUI.hpp  cursesClient.cmake  info.txt
src/libATA_SMART/: CMakeLists.txt  SMART_test.cpp  SMARTaccess.cpp  SMARTaccess.hpp  build_SMART_test_for_Linux.sh  libATA_SMART.cmake
src/libConfig/: ConfigurationLoader.cpp  ConfigurationLoader.hpp
src/server/: BSD_sockets.cmake
src/service/: SMARTmonitorService.cpp  SMARTmonitorService.hpp  service_main.cpp
src/socket/: SocketOperations.cpp
src/tests/: SMARTmon_tests_ID_prefix.h  readAndPrintAllSuppSMARTattrIDs.h
src/tests/minClient/: CMakeLists.txt  ProgRetCodes.h  handleCmdLineOpts.hpp  main.cpp
src/tests/minClient/cxxopts/: handleCmdLineOpts.hpp
src/tests/minSMARTmonClientDerived/: CMakeLists.txt  main.cpp
src/tests/readAllSupportedSMART_IDsTime/: CMakeLists.txt  RdAllSuppNVMeSMARTattrIDs_ID_prefix.h  createForNVMeDataCarriers.bat  createUnixMakeFile.sh  handCmdLineOpts.cpp  main.cpp
src/tests/readAllSupportedSMART_IDsTime/cxxopts/: handCmdLineOpts.hpp
src/tinyxml2/: ConfigLoader.cpp  ConfigLoader.hpp  ProcessSMARTdata.cpp  ProcessSMARTdata.hpp
src/wxWidgets/: CMakeLists.txt  ConnectToServerDialog.cpp  ConnectToServerDialog.hpp  PerDataCarrierPanel.hpp  SMARTtableListCtrl.cpp  SMARTtableListCtrl.hpp  SetSMARTattrEvent.hpp  SupportedSMARTIDsDialog.cpp  SupportedSMARTIDsDialog.hpp  wxSMARTmonitorApp.cpp  wxSMARTmonitorApp.hpp  wxSMARTmonitorDialog.cpp  wxSMARTmonitorDialog.hpp  wxSMARTmonitorTaskBarIcon.cpp  wxSMARTmonitorTaskBarIcon.hpp  wxSMARTvalueProcessor.cpp  wxSMARTvalueProcessor.hpp  wxWidgetsGUI.cmake
src/wxWidgets/UI/: About.hpp
wxWidgets/: CMakeLists.txt  Makefile  SMARTtableListCtrl.cpp  cmake_install.cmake  wxSMARTmonitorApp.cpp  wxSMARTmonitorApp.hpp  wxSMARTmonitorDialog.cpp  wxSMARTmonitorDialog.hpp  wxSMARTmonitorTaskBarIcon.cpp  wxSMARTmonitorTaskBarIcon.hpp  wxSMARTreader.hpp  wxSMARTvalueProcessor.cpp
(+29 files in other folders)
